# ASTC

./: .gitignore  .travis.yml  AsturCoin.files  COPYING  INSTALL  Makefile.am  configure.ac
contrib/: README.md  asturcoin-qt.pro  bitcoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/devtools/: README.md  fix-copyright-headers.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-asturcoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in  extract_strings_qt.py  make_windows_icon.sh
src/: .gitignore  Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  asturcoin-cli-res.rc  asturcoin-cli.cpp  asturcoind-res.rc  asturcoind.cpp  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  (+51 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: asturcoin_find_bdb51.m4  asturcoin_qt.m4  asturcoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  asturcoin.cpp  asturcoin.qrc  asturcoinaddressvalidator.cpp  asturcoinaddressvalidator.h  asturcoinamountfield.h  asturcoingui.cpp  asturcoingui.h  asturcoinstrings.cpp  asturcoinunits.cpp  asturcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  (+59 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  utildialog.ui
src/qt/locale/: asturcoin_ach.ts  asturcoin_af_ZA.ts  asturcoin_ar.ts  asturcoin_be_BY.ts  asturcoin_bg.ts  asturcoin_bs.ts  asturcoin_ca.ts  asturcoin_ca@valencia.ts  asturcoin_ca_ES.ts  asturcoin_cmn.ts  asturcoin_cs.ts  asturcoin_cy.ts  asturcoin_da.ts  asturcoin_de.ts  asturcoin_de_AT.ts  asturcoin_el_GR.ts  asturcoin_en.ts  asturcoin_eo.ts  asturcoin_es.ts  asturcoin_es_CL.ts  asturcoin_es_DO.ts  asturcoin_es_MX.ts  asturcoin_es_UY.ts  asturcoin_et.ts  asturcoin_eu_ES.ts  asturcoin_fa.ts  asturcoin_fa_IR.ts  asturcoin_fi.ts  asturcoin_fr.ts  asturcoin_fr_CA.ts  asturcoin_gl.ts  asturcoin_gu_IN.ts  asturcoin_he.ts  asturcoin_hi_IN.ts  asturcoin_hr.ts  asturcoin_hu.ts  asturcoin_id_ID.ts  asturcoin_it.ts  asturcoin_ja.ts  asturcoin_ka.ts  (+31 more)
src/qt/res/: asturcoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_asturcoin.cpp  util_tests.cpp
